[package]
name = "bilidown"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "gzip"] }
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1.0"

regex = "1.0"
tokio-util = "0.7"  # 流处理工具
futures = "0.3"     # 异步工具
tempfile = "3.20.0"
dirs = "6.0.0"

indicatif = "0.18"
futures-util = "0.3" # 异步工具
